All crates build and check out
The build times are very long unfortunately, and its clear why
the teensy4rs project split each pac into individual devices.

Perhaps that can be automated for all of the devices

--- a/devices/imxrt1011.yaml
+++ b/devices/imxrt1011.yaml
@@ -1,9 +1,4 @@
 _svd: "../svd/imxrt1011.svd"
 
-SNVS:
-  HPSR:
-    SECURITY_CONFIG:
-      FAB_CONFIG: [0, "FAB Configuration"]
-      OPEN_CONFIG: [1, "OPEN Configuration"]  
-      CLOSED_CONFIG: [9, "CLOSED Configuration"]
-
+_include: 
+  - "common.yaml"
