--- a/devices/common_patches/dedup_security_config_enum.yaml
+++ b/devices/common_patches/dedup_security_config_enum.yaml
@@ -1,5 +1,14 @@
 SNVS:
   HPSR:
+    _delete:
+      - SECURITY_CONFIG
+    _add:
+      SECURITY_CONFIG:
+        description: "Security Configuration This field reflects the settings of the sys_secure_boot input and the three security configuration inputs to SNVS"
+        bitOffset: 12
+        bitWidth: 4
+        access: read-only
     SECURITY_CONFIG:
-      _delete:
-        - "*"
+      FAB_CONFIG: [0, "FAB Configuration"]
+      OPEN_CONFIG: [1, "OPEN Configuration"]  
+      CLOSED_CONFIG: [9, "CLOSED Configuration"]
