Port of imxrt1062-hal ccm to imxrt-ral
Notable is that a few things made this take a little while, a lack of
write_with_zero() matching the svd2rust equivalent operation in stm32ral
register macros, and the use of impl From<T> for Y to convert some
hal types to ral values, instead some functions are likely to be better
suited for that since ral does not use types where svd2rust does.

--- a/imxrt-ral/Cargo.toml
+++ b/imxrt-ral/Cargo.toml
@@ -29,7 +29,7 @@ cortex-m-rt = { version = "0.6.12", optional = true }
 rt = ["cortex-m-rt/device"]
 inline-asm = ["external_cortex_m/inline-asm"]
 rtfm = []
-default = []
+default = ["imxrt1062"]
 nosync = []
 doc = []
 armv6m = []
