Patch DMA0 to use a cluster for TCDs
DMA transfer control descriptors (TCD) may be represented as a
cluster. The commit adds a patch to all SVD files that defines
the clustering.

This ends up minimally transforming the output Rust. The changes
manifest as a renaming resembling

  TCD8_ATTR -> TCD_ATTR8

Howeverm the change may be useful for other users of these patched
SVDs. I know that svd2rust would take advantage of this change.

--- a/imxrt-ral/devices/imxrt1051.yaml
+++ b/imxrt-ral/devices/imxrt1051.yaml
@@ -4,3 +4,4 @@ _include:
   - "common.yaml"
   - "common_patches/pwm1/submodule_cluster.yaml"
   - "common_patches/usb1/endptctrl_array.yaml"
+  - "common_patches/dma0/tcd_cluster.yaml"
