--- a/imxrt-ral/devices/imxrt1011.yaml
+++ b/imxrt-ral/devices/imxrt1011.yaml
@@ -8,4 +8,5 @@ _include:
   - "common.yaml"
   - "common_patches/pwm1/submodule_cluster_1011.yaml"
   - "common_patches/usb1/endptctrl_array.yaml"
+  - "common_patches/dma0/tcd_cluster.yaml"
 
