imxrt-ral check now checks all chip variant builds
The default feature flag for imxrt1062 was removed and imxrt-hal now requires
feature flags to enable each chip. Currently only support the imxrt106x series
as other chips had various missing registers that need to be dealt with. In
particular the imxrt101x does not have a PLL_ARM register.

Adds a make file for imxrt-hal to check various combinations of feature
flags as well.

The check targets can easily be expanded for other optional features
like rt, rtfm, and nosync if we want.

In addition splits .gitignore into each directory to avoid a mega
.gitignore.

--- a/imxrt-ral/Makefile
+++ b/imxrt-ral/Makefile
@@ -1,12 +1,12 @@
-.PHONY: patch svd2rust form check clean-rs clean-patch clean-html clean rustfmt
+
+
+.PHONY: patch svd2rust form clean-rs clean-patch clean-check clean-html clean rustfmt check
 .PRECIOUS: svd/%.svd .deps/%.d
 
 SHELL := /usr/bin/env bash
-
-
 DEVICES ?= imxrt1011 imxrt1015 imxrt1021 imxrt1051 imxrt1052 imxrt1061 imxrt1062 imxrt1064 
 
-all: patch crate check rustfmt
+all: patch crate rustfmt check 
 
 # All yaml files in devices/ will be used to patch an SVD
 DEVICE_YAMLS := $(foreach device, $(DEVICES), \
@@ -38,8 +38,20 @@ patch: $(DEVICE_PATCHED_SVDS) $(ARCH_PATCHED_SVDS)
 
 format: $(DEVICE_FORMATTED_SVDS) $(ARCH_FORMATTED_SVDS)
 
-check:
-	cargo check
+# Check vairous feature set combinations here for each SoC in the family
+define check_template
+.check/$(1).ok:
+	@mkdir -p .check
+	cargo check --features=$(1) && touch $$@
+
+endef
+
+$(foreach device,$(DEVICES),$(eval $(call check_template,$(device))))
+
+check: $(patsubst %, .check/%.ok, $(DEVICES))
+
+clean-check:
+	rm -rf .check
 
 html/index.html: $(PATCHED_SVDS)
 	@mkdir -p html
