--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imxrt-hal"
-authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre"]
+authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
 description = "Hardware abstraction layer for all NXP i.MX RT microcontrollers"
 repository = "https://github.com/imxrt-rs/imxrt-rs"
 documentation = "https://docs.rs/imxrt"
