Port iomux to imxrt-ral
Note that each pad requires unsafe modify_reg() calls to convert to a
particular pads alternate usage.

This should be safe because each pad has its own register pair (mux/pad) for
setting things up. So long as the only place where these registers are
used is in the iomuxc instance in struct Peripherals, this is like just
fine.

--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -26,15 +26,17 @@ test = false
 
 [features]
 default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits
+
+# Device specific feature flags
 # these need fixes and conditional sections in CCM
 #imxrt1011 = ["imxrt-ral/imxrt1011"]
 #imxrt1015 = ["imxrt-ral/imxrt1015"]
 #imxrt1021 = ["imxrt-ral/imxrt1021"]
-imxrt1051 = ["imxrt-ral/imxrt1051"]
-imxrt1052 = ["imxrt-ral/imxrt1052"]
-imxrt1061 = ["imxrt-ral/imxrt1061"]
+#imxrt1051 = ["imxrt-ral/imxrt1051"]
+#imxrt1052 = ["imxrt-ral/imxrt1052"]
+#imxrt1061 = ["imxrt-ral/imxrt1061"]
 imxrt1062 = ["imxrt-ral/imxrt1062"]
-imxrt1064 = ["imxrt-ral/imxrt1064"]
+#imxrt1064 = ["imxrt-ral/imxrt1064"]
 rtfm = ["imxrt-ral/rtfm"]
 rt = ["imxrt-ral/rt"]
 nosync = ["imxrt-ral/nosync"]
