--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -13,6 +13,7 @@ version = "0.1.0"
 
 
 [dependencies]
+cortex-m = { version = "0.6" }
 imxrt-ral = { version = "0.1.0", path = "../imxrt-ral" }
 bitflags = "1.2.1"
 embedded-hal = "0.2.3"
