--- a/imxrt-ral/Cargo.toml
+++ b/imxrt-ral/Cargo.toml
@@ -23,10 +23,10 @@ no-default-features = true
 # Change dependency versions in stm32ral.py, not here!
 bare-metal = "0.2.5"
 external_cortex_m = { package = "cortex-m", version = "0.6.2" }
-cortex-m-rt = { version = "0.6.12", optional = true }
+# TODO use imxrt-rt here in place cortex-m-rt = { version = "0.6.12", optional = true }
 
 [features]
-rt = ["cortex-m-rt/device"]
+rt = []
 inline-asm = ["external_cortex_m/inline-asm"]
 rtfm = []
 default = []
