--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,32 +26,36 @@ jobs:
     - name: Generate code
       if: steps.ral-cache.outputs.cache-hit != 'true'
       run: cd imxrt-ral && make
-    - name: Build imxrt-ral for (${{ matrix.feature }})
+    - name: Build imxrt-ral for (${{ matrix.feature }}) RAL
       run: cd imxrt-ral && cargo build --verbose --features ${{ matrix.feature }}
-    - name: Run tests (${{ matrix.feature }})
-      run: cd imxrt-ral && cargo test --verbose --features ${{ matrix.feature }}
+    - name: Run tests (${{ matrix.feature }}) for RAL
+      run: cd imxrt-ral && cargo test --verbose --features ${{ matrix.feature }} --lib
 
-  clippy_check:
+  build-hal:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        feature: ["imxrt1062"]
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-            toolchain: nightly
-            components: clippy
-            override: true
-      - uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
-
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: rustup component add rustfmt
-      - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+    - uses: actions/checkout@v2
+    - name: install virtualenv
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: Install python dependencies
+      run: cd imxrt-ral && pip install -U -r requirements.txt
+    - name: Cache generated code
+      uses: actions/cache@v1
+      id: ral-cache
+      with:
+        path: imxrt-ral/src
+        key: ${{ runner.OS }}-ral-cache-${{ hashFiles('imxrt-ral/imxrtral.py') }}
+    - name: Generate code
+      if: steps.ral-cache.outputs.cache-hit != 'true'
+      run: cd imxrt-ral && make
+    - name: Build imxrt-hal for (${{ matrix.feature }}) HAL
+      run: cd imxrt-hal && cargo build --verbose --features ${{ matrix.feature }}
+    - name: Run tests (${{ matrix.feature }}) for HAL
+      run: cd imxrt-hal && cargo test --verbose --features ${{ matrix.feature }}
+    - name: Check format (${{ matrix.feature }}) for HAL
+      run: cd imxrt-hal && cargo fmt --all -- --check
