Run clippy on the HAL
There are clippy warnings as of this commit. However, I'm pushing the
commit to CI to show that the warnings are caught.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -59,3 +59,5 @@ jobs:
       run: cd imxrt-hal && cargo test --verbose --features ${{ matrix.feature }}
     - name: Check format (${{ matrix.feature }}) for HAL
       run: cd imxrt-hal && cargo fmt --all -- --check
+    - name: Run clippy (${{ matrix.feature }}) for HAL
+      run: cd imxrt-hal && cargo clippy --features ${{ matrix.feature }} -- -D warnings
