--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -9,12 +9,12 @@ keywords = ["imxrt", "nxp", "embedded", "no_std"]
 categories = ["embedded", "no-std"]
 license = "MIT/Apache-2.0"
 edition = "2018"
-version = "0.2.0"
+version = "0.2.1-alpha"
 
 
 [dependencies]
 cortex-m = { version = "0.6" }
-imxrt-ral = { version = "0.2.0", path = "../imxrt-ral" }
+imxrt-ral = "0.2.1-alpha"
 bitflags = "1.2.1"
 embedded-hal = "0.2.3"
 nb = "0.1.2"
