--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -14,7 +14,7 @@ version = "0.2.1"
 
 [dependencies]
 cortex-m = { version = "0.6" }
-imxrt-ral = "0.2.1"
+imxrt-ral = { version = "0.2.1", path = "../imxrt-ral" }
 bitflags = "1.2.1"
 embedded-hal = "0.2.3"
 nb = "0.1.2"
