--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,21 +11,25 @@ jobs:
         feature: ["imxrt1011", "imxrt1015", "imxrt1021", "imxrt1051", "imxrt1052", "imxrt1061", "imxrt1062", "imxrt1064"]
     steps:
     - uses: actions/checkout@v2
-    - name: install virtualenv
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install python dependencies
-      run: cd imxrt-ral && pip install -U -r requirements.txt
     - name: Cache generated code
       uses: actions/cache@v1
       id: ral-cache
       with:
         path: imxrt-ral
         key: ${{ runner.OS }}-ral-cache-${{ hashFiles('imxrt-ral/imxrtral.py') }}
+    # These steps only run if we have a RAL cache miss.
+    - name: install virtualenv
+      if: steps.ral-cache.outputs.cache-hit != 'true'
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: Install python dependencies
+      if: steps.ral-cache.outputs.cache-hit != 'true'
+      run: cd imxrt-ral && pip install -U -r requirements.txt
     - name: Generate code
       if: steps.ral-cache.outputs.cache-hit != 'true'
       run: cd imxrt-ral && make
+    # Build and test the RAL
     - name: Build imxrt-ral for (${{ matrix.feature }}) RAL
       run: cd imxrt-ral && cargo build --verbose --features ${{ matrix.feature }}
     - name: Run tests (${{ matrix.feature }}) for RAL
@@ -38,21 +42,25 @@ jobs:
         feature: ["imxrt1062"]
     steps:
     - uses: actions/checkout@v2
-    - name: install virtualenv
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install python dependencies
-      run: cd imxrt-ral && pip install -U -r requirements.txt
     - name: Cache generated code
       uses: actions/cache@v1
       id: ral-cache
       with:
         path: imxrt-ral
         key: ${{ runner.OS }}-ral-cache-${{ hashFiles('imxrt-ral/imxrtral.py') }}
+    # These steps only run if we have a RAL cache miss
+    - name: install virtualenv
+      if: steps.ral-cache.outputs.cache-hit != 'true'
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.7
+    - name: Install python dependencies
+      if: steps.ral-cache.outputs.cache-hit != 'true'
+      run: cd imxrt-ral && pip install -U -r requirements.txt
     - name: Generate code
       if: steps.ral-cache.outputs.cache-hit != 'true'
       run: cd imxrt-ral && make
+    # Build and test the HAL
     - name: Build imxrt-hal for (${{ matrix.feature }}) HAL
       run: cd imxrt-hal && cargo build --verbose --features ${{ matrix.feature }}
     - name: Run tests (${{ matrix.feature }}) for HAL
