--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -13,6 +13,7 @@ version = "0.2.1"
 
 
 [dependencies]
+as-slice = "0.1.3"
 cortex-m = { version = "0.6" }
 imxrt-ral = { version = "0.2.1", path = "../imxrt-ral" }
 bitflags = "1.2.1"
@@ -23,7 +24,6 @@ log = "0.4.8"
 
 [lib]
 bench = false
-test = false
 
 [features]
 default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits
