--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,6 +3,20 @@ name: All Checks
 on: [push, pull_request]
 
 jobs:
+  gen-ral:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install virtualenv
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install Python dependencies
+        run: cd imxrt-ral && pip install -U -r requirements.txt
+      - name: Generate RAL
+        run: make -C imxrt-ral
+      - name: Ensure RAL is consistent with checked-in code
+        run: git diff-index --quiet HEAD
 
   build-ral:
     runs-on: ubuntu-latest
@@ -11,25 +25,6 @@ jobs:
         feature: ["imxrt1011", "imxrt1015", "imxrt1021", "imxrt1051", "imxrt1052", "imxrt1061", "imxrt1062", "imxrt1064"]
     steps:
     - uses: actions/checkout@v2
-    - name: Cache generated code
-      uses: actions/cache@v1
-      id: ral-cache
-      with:
-        path: imxrt-ral
-        key: ${{ runner.OS }}-ral-cache-${{ hashFiles('imxrt-ral/imxrtral.py') }}
-    # These steps only run if we have a RAL cache miss.
-    - name: install virtualenv
-      if: steps.ral-cache.outputs.cache-hit != 'true'
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install python dependencies
-      if: steps.ral-cache.outputs.cache-hit != 'true'
-      run: cd imxrt-ral && pip install -U -r requirements.txt
-    - name: Generate code
-      if: steps.ral-cache.outputs.cache-hit != 'true'
-      run: cd imxrt-ral && make
-    # Build and test the RAL
     - name: Build imxrt-ral for (${{ matrix.feature }}) RAL
       run: cd imxrt-ral && cargo build --verbose --features ${{ matrix.feature }}
     - name: Run tests (${{ matrix.feature }}) for RAL
@@ -42,25 +37,6 @@ jobs:
         feature: ["imxrt1062"]
     steps:
     - uses: actions/checkout@v2
-    - name: Cache generated code
-      uses: actions/cache@v1
-      id: ral-cache
-      with:
-        path: imxrt-ral
-        key: ${{ runner.OS }}-ral-cache-${{ hashFiles('imxrt-ral/imxrtral.py') }}
-    # These steps only run if we have a RAL cache miss
-    - name: install virtualenv
-      if: steps.ral-cache.outputs.cache-hit != 'true'
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install python dependencies
-      if: steps.ral-cache.outputs.cache-hit != 'true'
-      run: cd imxrt-ral && pip install -U -r requirements.txt
-    - name: Generate code
-      if: steps.ral-cache.outputs.cache-hit != 'true'
-      run: cd imxrt-ral && make
-    # Build and test the HAL
     - name: Build imxrt-hal for (${{ matrix.feature }}) HAL
       run: cd imxrt-hal && cargo build --verbose --features ${{ matrix.feature }}
     - name: Run tests (${{ matrix.feature }}) for HAL
