--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Python dependencies
         run: cd imxrt-ral && pip install -U -r requirements.txt
       - name: Generate RAL
-        run: make -C imxrt-ral
+        run: make -C imxrt-ral ci
       - name: Ensure RAL is consistent with checked-in code
         run: git diff-index --quiet HEAD
 
