--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -19,6 +19,10 @@ embedded-hal = "0.2.3"
 nb = "0.1.2"
 void = { version = "1.0.2", default-features = false }
 log = "0.4.8"
+imxrt106x-iomuxc = { path = "../../iomuxc/imxrt106x-iomuxc", optional = true }
+
+[dependencies.imxrt-iomuxc]
+path = "../../iomuxc"
 
 [lib]
 bench = false
@@ -34,7 +38,7 @@ default = ["embedded-hal/unproven"] # Allows us to access the new digital pin tr
 #imxrt1051 = ["imxrt-ral/imxrt1051"]
 #imxrt1052 = ["imxrt-ral/imxrt1052"]
 #imxrt1061 = ["imxrt-ral/imxrt1061"]
-imxrt1062 = ["imxrt-ral/imxrt1062"]
+imxrt1062 = ["imxrt-ral/imxrt1062", "imxrt106x-iomuxc"]
 #imxrt1064 = ["imxrt-ral/imxrt1064"]
 rtic = ["imxrt-ral/rtic"]
 rt = ["imxrt-ral/rt"]
