Integrate the imxrt-iomuxc crates in the HAL repo
I'm adding these to the repo so that it's easier to review. We'll
talk about if we should continue maintaining in this repo, or in
a separate repo.

For my reference: the imxrt-iomuxc files track to commit d886fa4
in my local development repo.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [workspace]
-
 members = [
     "imxrt-ral",
-    "imxrt-hal"
+    "imxrt-hal",
+
+    "imxrt-iomuxc",
+    "imxrt-iomuxc/imxrt-iomuxc-build",
+    "imxrt-iomuxc/imxrt106x-iomuxc",
 ]
