--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,3 +45,5 @@ jobs:
       run: cd imxrt-hal && cargo fmt --all -- --check
     - name: Run clippy (${{ matrix.feature }}) for HAL
       run: cd imxrt-hal && cargo clippy --features ${{ matrix.feature }} -- -D warnings
+    - name: Run tests for iomuxc crates
+      run: cargo test --package=imxrt-iomuxc --package=imxrt-iomuxc-build --package=imxrt106x-iomuxc
