Integrate 106x-specific crate into iomuxc crate
Rather than having a separate crate per chip implementation, I'm
proposing that we have a single, imxrt-iomuxc crate. We expose
chip-specific pads behind feature flags. I know this is the opposite
of what I originally proposed, but hear me out.

We won't require a feature flag, but a feature flags will be needed
to access processor-specific pads. The interfaces are the only thing
that we expose if we don't use a feature flag, so that's the same as
using the imxrt-iomuxc crate by itself. Adding more and more feature
flags is the same as depending on more and more crates. If we expand
that through a user's dependency graph, it ends up being equivalent.

But, managing a single crate with multiple feature flags is easier
than managing multiple crates that effectively represent features.
We will still compile all of the tests without feature flags. And,
we can document everything by specifying '--all-features'. Finally,
we can expose a simpler interface without the "if it's not
documented, it's not public" clauses.

--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -24,12 +24,6 @@ log = "0.4.8"
 version = "0.1.0"
 path = "../imxrt-iomuxc"
 
-# TODO this will be exposed by a 106x-specific HAL. We're
-# exposing it here for backwards compatibility.
-[dependencies.imxrt106x-iomuxc]
-path = "../imxrt-iomuxc/imxrt106x-iomuxc"
-optional = true
-
 [lib]
 bench = false
 
@@ -44,7 +38,7 @@ default = ["embedded-hal/unproven"] # Allows us to access the new digital pin tr
 #imxrt1051 = ["imxrt-ral/imxrt1051"]
 #imxrt1052 = ["imxrt-ral/imxrt1052"]
 #imxrt1061 = ["imxrt-ral/imxrt1061"]
-imxrt1062 = ["imxrt-ral/imxrt1062", "imxrt106x-iomuxc"]
+imxrt1062 = ["imxrt-ral/imxrt1062", "imxrt-iomuxc/imxrt106x"]
 #imxrt1064 = ["imxrt-ral/imxrt1064"]
 rtic = ["imxrt-ral/rtic"]
 rt = ["imxrt-ral/rt"]
