ral: switch to a package inclusion list
It's easier to specify what should be in the packaged crate, rather
than what shouldn't be in the packaged crate.

--- a/imxrt-ral/Cargo.toml
+++ b/imxrt-ral/Cargo.toml
@@ -10,11 +10,10 @@ keywords = ["imxrt", "nxp", "embedded", "no_std"]
 categories = ["embedded", "no-std"]
 license = "MIT/Apache-2.0"
 edition = "2018"
-exclude = [
-    "cortex_m/*",
-    "devices/*",
-    "scripts/*",
-    "svd/*",
+include = [
+    "src/*",
+    "build.rs",
+    "Cargo.toml",
 ]
 
 # Change version in imxrtral.py, not in Cargo.toml!
