--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -13,7 +13,7 @@ version = "0.4.1"
 [dependencies]
 as-slice = "0.1.3"
 cortex-m = { version = "0.6" }
-imxrt-ral = { version = "0.4.0", path = "../imxrt-ral", features = ["imxrt1062"] }
+imxrt-ral = { version = "0.4.0", path = "../imxrt-ral" }
 bitflags = "1.2.1"
 embedded-hal = "0.2.3"
 nb = "0.1.2"
