Creates chip specific imxrt1062-hal crate
To start the hal split move the entire imxrt-hal crate to imxrt1062-hal,
set all feature flags for dependencies appropriately, and fix the
workspace to build on cargo build after checkout.

A second imxrt1011-hal can now easily be added, and shared code moved
appropriately to a common imxrt-hal-common crate as a dependency of
both as time and energy permits.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,21 +30,18 @@ jobs:
     - name: Run tests (${{ matrix.feature }}) for RAL
       run: cd imxrt-ral && cargo test --verbose --features ${{ matrix.feature }}
 
-  build-hal:
+  build-hals:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        feature: ["imxrt1062"]
     steps:
     - uses: actions/checkout@v2
-    - name: Build imxrt-hal for (${{ matrix.feature }}) HAL
-      run: cd imxrt-hal && cargo build --verbose --features ${{ matrix.feature }}
-    - name: Run tests (${{ matrix.feature }}) for HAL
-      run: cd imxrt-hal && cargo test --verbose --features ${{ matrix.feature }}
-    - name: Check format (${{ matrix.feature }}) for HAL
-      run: cd imxrt-hal && cargo fmt --all -- --check
-    - name: Run clippy (${{ matrix.feature }}) for HAL
-      run: cd imxrt-hal && cargo clippy --features ${{ matrix.feature }} -- -D warnings
+    - name: Build HAL(s)
+      run: cd imxrt1062-hal && cargo build --verbose
+    - name: Run HAL(s) tests
+      run: cargo test --verbose
+    - name: Check format for HAL(s)
+      run: cargo fmt --all -- --check
+    - name: Run clippy for HAL(s)
+      run: cargo clippy -- -D warnings
 
   build-iomuxc:
     runs-on: ubuntu-latest
