--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -20,6 +20,10 @@ nb = "0.1.2"
 void = { version = "1.0.2", default-features = false }
 log = "0.4.8"
 
+[dependencies.imxrt-dma]
+version = "0.1"
+path = "../imxrt-dma"
+
 [dependencies.imxrt-iomuxc]
 version = "0.1.0"
 path = "../imxrt-iomuxc"
