Depend on imxrt-iomuxc using a git dependency

--- a/imxrt1060-hal/Cargo.toml
+++ b/imxrt1060-hal/Cargo.toml
@@ -31,7 +31,8 @@ features = ["imxrt1062"]
 
 [dependencies.imxrt-iomuxc]
 version = "0.2.0"
-path = "../imxrt-iomuxc"
+git = "https://github.com/imxrt-rs/imxrt-iomuxc.git"
+rev = "dffa37438b362ad598015db90f8b2d4b6c71b609"
 features = ["imxrt1060"]
 
 [lib]
