Remove imxrt-dma from the repository
Update imxrt-hal to target a local installation until I push the
imxrt-dma crate to a separate repo

--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -22,7 +22,7 @@ log = "0.4.8"
 
 [dependencies.imxrt-dma]
 version = "0.1"
-path = "../imxrt-dma"
+path = "../../dma"
 
 [dependencies.imxrt-iomuxc]
 version = "0.1.0"
