--- a/imxrt1060-hal/Cargo.toml
+++ b/imxrt1060-hal/Cargo.toml
@@ -23,6 +23,7 @@ embedded-hal = "0.2.3"
 nb = "0.1.2"
 void = { version = "1.0.2", default-features = false }
 log = "0.4.8"
+rand_core = { version = "0.5", default-features = false, optional = true }
 
 [dependencies.imxrt-dma]
 version = "0.1"
