--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -23,7 +23,8 @@ rand_core = { version = "0.5", default-features = false, optional = true }
 
 [dependencies.imxrt-iomuxc]
 version = "0.1.0"
-path = "../imxrt-iomuxc"
+git = "https://github.com/imxrt-rs/imxrt-iomuxc.git"
+branch = "v0.1"
 
 [lib]
 bench = false
