--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,7 @@
 members = [
     "imxrt1060-hal",
 ]
+
+[patch.crates-io.imxrt-ral]
+git = "https://github.com/imxrt-rs/imxrt-ral"
+branch = "typenum-instances"
