--- a/imxrt1060-hal/Cargo.toml
+++ b/imxrt1060-hal/Cargo.toml
@@ -28,6 +28,11 @@ rand_core = { version = "0.5", default-features = false, optional = true }
 version = "0.2.4"
 features = ["unproven"] # Allows us to access the new digital pin traits
 
+[dependencies.imxrt-ccm]
+features = ["imxrt-ral", "imxrt1060"]
+git = "https://github.com/imxrt-rs/imxrt-ccm.git"
+branch = "ral-typenum-instances"
+
 [dependencies.imxrt-dma]
 version = "0.1"
 rev = "a825d22"
@@ -35,8 +40,6 @@ git = "https://github.com/imxrt-rs/imxrt-dma"
 
 [dependencies.imxrt-ral]
 version = "0.4.0"
-rev = "aae64342e2cb7491707776fd9cc70b100f8d00c9"
-git = "https://github.com/imxrt-rs/imxrt-ral"
 features = ["imxrt1062"]
 
 [dependencies.imxrt-iomuxc]
