--- a/imxrt1060-hal/Cargo.toml
+++ b/imxrt1060-hal/Cargo.toml
@@ -19,11 +19,14 @@ version = "0.5.0-alpha"
 as-slice = "0.1.3"
 cortex-m = { version = "0.6" }
 bitflags = "1.2.1"
-embedded-hal = "0.2.3"
 nb = "0.1.2"
 void = { version = "1.0.2", default-features = false }
 log = "0.4.8"
 rand_core = { version = "0.5", default-features = false, optional = true }
+
+[dependencies.embedded-hal]
+version = "0.2.4"
+features = ["unproven"] # Allows us to access the new digital pin traits
 
 [dependencies.imxrt-dma]
 version = "0.1"
@@ -46,7 +49,6 @@ features = ["imxrt1060"]
 bench = false
 
 [features]
-default = ["embedded-hal/unproven"] # Allows us to access the new digital pin traits
 rtic = ["imxrt-ral/rtic"]
 rt = ["imxrt-ral/rt"]
 nosync = ["imxrt-ral/nosync"]
