Enable the imxrt1064 feature
The HAL builds with the `imxrt1064` feature:

  cd imxrt-hal
  cargo build --features imxrt1064

It has not been tested on hardware. Only thing that seems to change
is the FlexSPI2 IOMUXC registers are reserved. Everything else is the
same.

--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -41,7 +41,7 @@ default = ["embedded-hal/unproven"] # Allows us to access the new digital pin tr
 #imxrt1052 = ["imxrt-ral/imxrt1052"]
 #imxrt1061 = ["imxrt-ral/imxrt1061"]
 imxrt1062 = ["imxrt-ral/imxrt1062", "imxrt-iomuxc/imxrt106x"]
-#imxrt1064 = ["imxrt-ral/imxrt1064"]
+imxrt1064 = ["imxrt-ral/imxrt1064", "imxrt-iomuxc/imxrt106x"]
 rtic = ["imxrt-ral/rtic"]
 rt = ["imxrt-ral/rt"]
 nosync = ["imxrt-ral/nosync"]
