Add support for the 1061
See the data sheet for differences. One notable change is that the
1061 doesn't have the graphics features (LCD, CSI, pixel pipeline).
We don't have drivers for these peripherals today, so the HAL can
support these features without issue.

--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -39,7 +39,7 @@ default = ["embedded-hal/unproven"] # Allows us to access the new digital pin tr
 #imxrt1021 = ["imxrt-ral/imxrt1021"]
 #imxrt1051 = ["imxrt-ral/imxrt1051"]
 #imxrt1052 = ["imxrt-ral/imxrt1052"]
-#imxrt1061 = ["imxrt-ral/imxrt1061"]
+imxrt1061 = ["imxrt-ral/imxrt1061", "imxrt-iomuxc/imxrt106x"]
 imxrt1062 = ["imxrt-ral/imxrt1062", "imxrt-iomuxc/imxrt106x"]
 imxrt1064 = ["imxrt-ral/imxrt1064", "imxrt-iomuxc/imxrt106x"]
 rtic = ["imxrt-ral/rtic"]
