Add CI for 1061, 1064 features

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        feature: ["imxrt1062"]
+        feature: ["imxrt1061", "imxrt1062", "imxrt1064"]
     steps:
     - uses: actions/checkout@v2
     - name: Build imxrt-hal for (${{ matrix.feature }}) HAL
