--- a/imxrt1060-hal/Cargo.toml
+++ b/imxrt1060-hal/Cargo.toml
@@ -45,6 +45,10 @@ git = "https://github.com/imxrt-rs/imxrt-iomuxc.git"
 rev = "dffa37438b362ad598015db90f8b2d4b6c71b609"
 features = ["imxrt1060"]
 
+[dev-dependencies.cortex-m-rt]
+version = "0.6"
+features = ["device"]
+
 [lib]
 bench = false
 
