--- a/imxrt-hal/Cargo.toml
+++ b/imxrt-hal/Cargo.toml
@@ -26,6 +26,10 @@ version = "0.1.2"
 git = "https://github.com/imxrt-rs/imxrt-iomuxc.git"
 branch = "v0.1"
 
+[dev-dependencies.cortex-m-rt]
+version = "0.6"
+features = ["device"]
+
 [lib]
 bench = false
 
