--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,53 @@
-[workspace]
-members = [
-    "imxrt1060-hal",
-]
+[package]
+name = "imxrt-hal"
+authors = ["Tom Burdick <tom.burdick@electromatic.us>", "Ian McIntyre <ianpmcintyre@gmail.com>"]
+description = """
+Hardware abstraction layer for NXP i.MX RT microcontrollers.
+"""
+repository = "https://github.com/imxrt-rs/imxrt-hal"
+readme = "README.md"
+keywords = ["imxrt", "nxp", "embedded", "no_std", "embedded-hal"]
+categories = ["embedded", "no-std"]
+license = "MIT OR Apache-2.0"
+edition = "2018"
+version = "0.5.0-alpha"
+
+[dependencies.bitflags]
+version = "1.2"
+
+[dependencies.rand_core]
+version = "0.5"
+default-features = false
+optional = true
+
+[dev-dependencies.pin-utils]
+version = "0.1"
+
+#######################
+# imxrt-rs dependencies
+#######################
+
+[dependencies.imxrt-dma]
+version = "0.1"
+git = "https://github.com/imxrt-rs/imxrt-dma"
+
+[dependencies.imxrt-iomuxc]
+version = "0.2"
+path = "../iomuxc"
+
+[dependencies.imxrt-ral]
+version = "0.5"
+path = "../ral"
+
+[package.metadata.docs.rs]
+default-target = "thumbv7em-none-eabihf"
+features = ["imxrt-ral/imxrt1062"]
+
+######################
+# Chip family features
+######################
+
+[features]
+imxrt1010 = []
+imxrt1060 = []
+imxrt1064 = []
