Add first board-independent example
The LED example works on both the teensy4 and imxrt1010evk boards. Use
the 'run' Cargo aliases to flash. You'll need additional tools to flash.

Need documentation on flashing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,3 +63,12 @@ imxrt1064 = []
 # Enable implementations for EH02 "unproven" traits.
 # Requires the EH02 "unproven" feature.
 eh02-unproven = []
+
+[workspace]
+members = [
+    "examples",
+    "tools",
+]
+
+[patch.crates-io.cortex-m-rt]
+path = "../../cortex-m/cortex-m-rt"
