--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ version = "1.2"
 package = "embedded-hal"
 version = "0.2"
 
+[dependencies.eh1]
+package = "embedded-hal"
+version = "=1.0.0-alpha.5"
+
 [dependencies.rand_core]
 version = "0.5"
 default-features = false
