--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -32,6 +32,9 @@ features = ["device", "region-alias"]
 version = "1.0"
 optional = true
 
+[dependencies.embedded-hal]
+version = "=1.0.0-alpha.5"
+
 # Use existing FCB, instead of defining inline.
 [target.thumbv7em-none-eabihf.dependencies.teensy4-fcb]
 optional = true
@@ -63,4 +66,8 @@ required-features = ["rtic"]
 
 [[bin]]
 name = "rtic_pit"
+required-features = ["rtic"]
+
+[[bin]]
+name = "rtic_uart"
 required-features = ["rtic"]
