Add clock_out example for observing clocks
TODO: Document the example. Describe how the menu works.
TODO: Finish testing all clocks. AHB, IPG, and PERCLK look great.
TODO: Fix runtime and memory layout. We can't feasibly put all things in
      the 1010's OCRAM. Needed to optimize for size in order to get the
      clock_out example linking.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,3 +78,19 @@ members = [
 
 [patch.crates-io.cortex-m-rt]
 path = "../../cortex-m/cortex-m-rt"
+
+[profile.dev]
+panic = "abort"
+
+[profile.release]
+opt-level = "z"
+lto = "fat"
+panic = "abort"
+
+[profile.dev.build-override]
+opt-level = 0
+codegen-units = 256
+
+[profile.release.build-override]
+opt-level = 0
+codegen-units = 256
