--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -56,12 +56,24 @@ version = "0.2"
 [dependencies.menu]
 version = "0.3.2"
 
+[dependencies.rtt-target]
+version = "0.3"
+optional = true
+features = ["cortex-m"]
+
+[dependencies.panic-rtt-target]
+version = "0.1"
+optional = true
+features = ["cortex-m"]
+
 [features]
 imxrt1010evk = [
     "imxrt-iomuxc/imxrt1010",
     "imxrt-ral/imxrt1011",
     "imxrt-hal/imxrt1010",
     "imxrt-boot-gen/imxrt1010",
+    "rtt-target",
+    "panic-rtt-target",
 ]
 teensy4 = [
     "imxrt-iomuxc/imxrt1060",
