Add LPSPI driver with HAL, RTIC examples

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -41,6 +41,7 @@ run-teensy4 = [
 [target.thumbv7em-none-eabihf]
 rustflags = [
     "-C", "link-arg=-Tlink.x",
+    "-C", "link-arg=-error-limit=0",
 ]
 runner = [
     "cargo", "run",
