--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -37,6 +37,7 @@ run-teensy4 = [
 [target.thumbv7em-none-eabihf]
 rustflags = [
     "-C", "link-arg=-Tlink.x",
+    "-C", "link-arg=-Tdefmt.x",
     "-C", "link-arg=-error-limit=0",
 ]
 runner = [
