--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ version = "1.0"
 version = "1.2"
 
 [dependencies.nb]
-optional = true
 version = "1"
 
 [dependencies.eh02]
@@ -78,7 +77,7 @@ imxrt1064 = []
 
 # Enable implementations for EH02 "unproven" traits.
 # Requires the EH02 "unproven" feature.
-eh02-unproven = ["dep:nb"]
+eh02-unproven = []
 
 [workspace]
 members = [
